--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -1,4 +1,6 @@
 \chapter*{Introduction}
+% \phantomsection % otherwise hyperlinks to previous chapter.
+\addcontentsline{toc}{chapter}{Introduction}
 
 \us is a programming language primarily designed for robotics. It's a
 dynamic, prototype-based, object-oriented scripting language. It
@@ -104,6 +106,11 @@ pages, \href{\docurl/urbi-sdk.html}{urbi-sdk.html}.
 %\xitem{sec:sdk}{\urbi \sdk specifications}%
 %  The \urbi software development kit that enable to
 %  interact with \urbi from \Cxx.
+\end{partDescription}
+
+\begin{partDescription}{part:platforms}{Urbi Platforms}
+\xitem{sec:nao}{Nao}%
+  Programming Aldebaran's Nao using \urbi.
 \end{partDescription}
 
 %\begin{partDescrption}{part:ref}{References and Index}
