--- a/doc/platforms/nao.tex
+++ b/doc/platforms/nao.tex
@@ -1,7 +1,7 @@
 \newcommand{\naoqi}{NaoQi\xspace}
 
 \chapter{Nao}
-
+\label{sec:nao}
 \section{Introduction}
 
 The Nao is a 60 centimeters tall humanoid robot built by Aldebaran Robotics.
