--- a/doc/specs/specs.tex
+++ b/doc/specs/specs.tex
@@ -20,4 +20,8 @@ only goal is to define the language and its libraries.
 \input{specs/tools}
 \input{specs/lang}
 \input{specs/stdlib}
-\input{specs/nao}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../urbi-sdk"
+%%% End:
