--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -48,6 +48,10 @@
 \label{part:specs}
 \input{specs/specs}
 
+\part{Urbi Platforms}
+\label{part:platforms}
+\input{platforms/platforms}
+
 \part{References and Index}
 \label{part:ref}
 
