--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -34,7 +34,7 @@ content as if it were typed in the network session, in order to
 provide the user with meaningful locations in error messages, \us
 features \dfn[syncline]{synclines}, a means to change the ``current
 location'', similarly to \lstinline[language=C]|#line| in \C-like
-languages.  This is achieved using special \lstindex|//#| comments.
+languages.  This is achieved using special \lstinline|//#| comments.
 
 The following special comments are recognized only as a whole line.
 If some component does not match exactly the expected syntax, or if
