--- a/doc/specs/object.tex
+++ b/doc/specs/object.tex
@@ -246,7 +246,7 @@ assert(!(String.isA(Float)));
 \end{urbiscript}
 
 \item \lstinline|isNil|\\
-  Return true if \lstinline|this| is nil, false otherwise.
+  Return true if \lstinline|this| is \refObject{nil}, false otherwise.
 
 \begin{urbiscript}[firstnumber=last]
 assert(nil.isNil);
