--- a/doc/specs/void.tex
+++ b/doc/specs/void.tex
@@ -7,9 +7,7 @@ contrast with \refObject{nil}, which is a valid object,
 
 \subsection{Prototypes}
 
-\begin{itemize}
-\item \refObject{void}
-\end{itemize}
+None.
 
 \subsection{Construction}
 
