--- a/doc/specs/tag.tex
+++ b/doc/specs/tag.tex
@@ -254,7 +254,7 @@ natural exit, exceptions, flow control statements like
 For instance, suppose we want to make sure we turn the gas off when
 we're done cooking. Here is the \emph{bad} way to do it:
 
-\begin{urbiscript}[urbiscript]
+\begin{urbiscript}[firstnumber=last]
 {
   function cook()
   {
