--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -578,20 +578,14 @@ false && (1 / 0);
 \end{table}
 
 \begin{urbiscript}[firstnumber=last]
-0 < 0;
-[00000000] false
-0 <= 0;
-[00000000] true
-0 == 0;
-[00000000] true
-0 === 0;
-[00000000] false
+assert(! (0 < 0));
+assert(  0 <= 0);
+assert(0 == 0);
+assert(! (0 === 0));
 var z = 0;
 [00000000] 0
-z === z;
-[00000000] true
-z !== z;
-[00000000] false
+assert(z === z);
+assert(! (z !== z));
 \end{urbiscript}
 
 \subsubsection{Miscellaneous operators}
@@ -622,26 +616,18 @@ targeted object.
 // On lists.
 var l = [1, 2, 3, 4, 5];
 [00000000] [1, 2, 3, 4, 5]
-l[0];
-[00000001] 1
-l[-1];
-[00000002] 5
-l[0] = 10;
-[00000003] 10
-l;
-[00000004] [10, 2, 3, 4, 5]
+assert(l[0] == 1);
+assert(l[-1] == 5);
+assert((l[0] = 10) == 10);
+assert(l == [10, 2, 3, 4, 5]);
 
 // On strings.
 var s = "abcdef";
 [00000005] "abcdef"
-s[0];
-[00000006] "a"
-s[1,3];
-[00000007] "bc"
-s[1,3] = "foo";
-[00000008] "foo"
-s;
-[00000009] "afoodef"
+assert(s[0] == "a");
+assert(s[1,3] == "bc");
+assert((s[1,3] = "foo") == "foo");
+assert(s == "afoodef");
 \end{urbiscript}
 
 \clearpage
